<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_copilot"
        android:title="@string/shortcut_copilot"
        android:showAsAction="always" />

    <item
        android:id="@+id/action_offline"
        android:title="@string/shortcut_offline"
        android:showAsAction="always" />

    <item
        android:id="@+id/action_print_invoice"
        android:title="@string/action_print_invoice"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_export_pdf"
        android:title="@string/action_export_pdf"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_share_pdf"
        android:title="@string/action_share_pdf"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_new_sale"
        android:title="@string/shortcut_new_sale"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_pos"
        android:title="@string/shortcut_pos"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_widget_settings"
        android:title="@string/action_widget_settings"
        android:showAsAction="never" />
</menu>
